# Alpha-Crucible-Quant

./: .coverage  .env  .env.example  .env_template  .gitignore  .pre-commit-config.yaml  BACKTEST_FIX_COMPLETE.md  BACKTEST_FIX_SUMMARY.md  BACKTEST_SOLUTION_SUMMARY.md  BACKTEST_VERIFICATION_COMPLETE.md  CLEANUP_COMPLETE_SUMMARY.md  CLEANUP_PLAN.md  COMPANY_UID_MIGRATION_COMPLETE.md  DEPLOYMENT_SUMMARY.md  DOCKER_AUTO_START_FIX.md  DOCKER_ENGINE_READINESS_FIX.md  ENVIRONMENT_VERIFICATION.md  EXECUTION_SUMMARY.md  FINAL_BACKTEST_VERIFICATION.md  FINAL_NGROK_SETUP_REPORT.md  FINAL_NGROK_VERIFICATION.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_AND_TEST_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  NGROK_SCRIPTS_FIX_SUMMARY.md  NGROK_TEST_RESULTS.md  README-APP.md  README.md  TEST_RESULTS.md  check_db.py  check_db_direct.py  check_youtube.py  debug_backtests.py  docker-compose.airflow.yml  docker-compose.dev.yml  docker-compose.yml  nginx.conf  (+8 more)
_deprecated/: add_name_column.py  test_backtest_name.py  test_create_backtest_with_name.py  test_frontend_response.py  test_name_field.py
airflow/: .gitignore  Dockerfile
airflow/config/: airflow.cfg
airflow/dags/: README.md  (+9 more)
backend/: Dockerfile  __init__.py  main.py  requirements.txt  test_portfolio_signals.py  test_ticker_validation.py
data/: trailer_map.json  unified_sentiment_2023-11-09_2025-10-09 (23).csv
docs/: AIRFLOW.md  AIRFLOW_IMPLEMENTATION.md  AIRFLOW_SETUP.md  ANALYSIS_REPORT.md  API.md  ARCHITECTURE.md  COPPER_SCHEMA_IMPLEMENTATION.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_IMPROVEMENTS.md  DEVELOPMENT_WORKFLOW.md  DIRECTORY_STRUCTURE.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  DYNAMIC_SIGNAL_COLUMNS.md  EQUAL_WEIGHT_BENCHMARK.md  FEATURES.md  FORWARD_FILL_SIGNALS.md  IMPROVEMENTS_SUMMARY.md  NEWS_SETUP.md  NGINX_CONFIG.md  PORTFOLIO_STORAGE.md  QUICK_START_DEVELOPMENT.md  RATE_LIMITING.md  README.md  RUN.md  UNIVERSE_MANAGEMENT.md  USAGE.md  VARROCK_DEPLOYMENT_COMPLETE.md  VARROCK_SCHEMA_IMPLEMENTATION.md  VARROCK_TESTING_SUMMARY.md  WEEKLY_BACKTEST_SETUP.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
repos_skeleton/: README.md
scripts/: CACHE_TROUBLESHOOTING.md  FIX_PORT_3000.md  README.md  bootstrap_database.py  calculate_signals.py  check_and_fix_iis.bat  check_ngrok.bat  cleanup_all.bat  create_universe_tables.sql  deploy.bat  deploy.sh  dev_all.bat  dev_backend.bat  dev_frontend.bat  disable_iis.bat  fix_iis_and_deploy.bat  fix_nginx_ips.bat  fix_nginx_ips_v2.bat  full_restart.bat  insert_copper.py  kill_ngrok.bat  kill_ngrok.sh  kill_port_3000.bat  migrate_add_company_uid_columns.py  migrate_to_company_uid.py  migrate_to_signals_table.py  migrate_to_varrock.py  permanent_fix_iis.bat  populate_company_uid_values.py  prepare_and_start_ngrok.bat  prepare_and_start_ngrok_final.bat  prepare_and_start_ngrok_updated.bat  prepare_and_start_ngrok_with_db_fix.bat  prepare_and_start_ngrok_with_iis_fix.bat  query_portfolio_data.py  quick_start.bat  quick_start.sh  restart_backend.bat  run_backtest.py  sentiment_yt_once.py  (+28 more)
src/: __init__.py
tests/: README_TESTING.md  __init__.py  conftest.py  demo_forward_fill.py  run_comprehensive_tests.py  test_create_universe.py  test_database.py  test_equal_weight_benchmark.py  test_forward_fill.py  test_modify_universe.py  test_null_missing_signals.py  test_portfolio_storage.py  test_run_backtest.py  test_runner.py  test_signal_combination_null_exclusion.py  test_signals.py  test_utils.py  verify_cleanup.py
(+181 files in other folders)
