# NOTE: This file is for package metadata only.
# Actual dependencies are managed in:
# - requirements.txt (core library dependencies)
# - backend/requirements.txt (backend API dependencies)
# Install dependencies using: pip install -r requirements.txt -r backend/requirements.txt

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-crucible-quant"
version = "1.0.0"
description = "Alpha Crucible - Professional Quantitative Investment System"
authors = [{name = "Alpha Crucible Team", email = "team@alphacrucible.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
# Dependencies are managed in requirements.txt and backend/requirements.txt
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
